docs/big-cleanup (#35)
* I will not even bother to describe

* docs: change use RUNTIPI_APP_DATA_PATH in running locally section

* docs: fix typo in installation

* docs: remove <br> in callout

* docs: make _meta.json titles match with guide titles

* docs: use repository instead of repo

* docs: don't use should because Nicolas doesn't like it

* docs: add an extra step in editing the traefik config

* docs: add missing bash decleration to using the cli

* docs: fix typo

* docs: small adjustments

---------

Co-authored-by: Nicolas Meienberger <github@thisprops.com>

--- a/pages/docs/apps-available.mdx
+++ b/pages/docs/apps-available.mdx
@@ -22,7 +22,7 @@ export const AppsCount = () => {
 
 # Apps available
 
-Tipi has a wide range of selfhosted apps you can install on your server. You can find them all in the [app store repo](https://github.com/runtipi/runtipi-appstore) and make requests for new apps there.
+Runtipi has a wide range of selfhosted apps you can install on your server. You can find them all in the [app store repository](https://github.com/runtipi/runtipi-appstore) and make requests for new apps there.
 
 <AppsCount />
 <Apps />
