--- a/pages/docs/contributing/running-locally.mdx
+++ b/pages/docs/contributing/running-locally.mdx
@@ -1,37 +1,42 @@
 # Running locally
 
-In this guide we will show you how to run Tipi locally on your machine. This is useful if you want to contribute to the project or if you want to test new apps you added to the appstore.
+In this guide we will show you how to run runtipi locally on your machine. This is useful if you want to contribute to the project or if you want to test new apps you added to the appstore.
 
 ## Prerequisites
+
 - Docker desktop up to date and running. Instructions: [Install Docker Engine](https://docs.docker.com/engine/install/)
 - Docker-compose
 - Node version 16+
 
 ## Prepare
-Once you have forked the repo and cloned it on your local machine you can start to prepare the environment.
+
+Once you have forked the repository and cloned it on your local machine you can start to prepare the environment.
 
 ## Install dependencies
-Tipi uses `pnpm` as a package manager and monorepo orchestrator. Install it with
+
+runtipi uses `pnpm` as a package manager and monorepo orchestrator. Install it with
 `npm i -g pnpm`
 
 Install the project dependencies
 `pnpm i`
 
-## Edit the envs
+## Edit the environment variables
 
 You need to copy `.env.exemple` to `.env` and edit there following env
 
 - ROOT_FOLDER_HOST change to put your root folder of runtipi
-- STORAGE_PATH change to put your storage folder of runtipi 
+- RUNTIPI_APP_DATA_PATH change to put your app data folder of runtipi
 
-## Run Tipi
+## Run runtipi
+
 1. Start the app with `npm run start:dev` from the root folder
-2. Visit `localhost:3000` in your browser
+2. Visit `localhost` in your browser
 
-## Using your own appstore repo
-You can change the repository Tipi is using to retrieve the appstore in order to test new apps you added.
+## Using your own appstore repository
 
-Create a `settings.json` file in the `state` folder (`runtipi/state/settings.json`) containing the URL of your repo and restart Tipi.
+You can change the repository runtipi is using to retrieve the appstore in order to test new apps you added.
+
+Create a `settings.json` file in the `state` folder (`runtipi/state/settings.json`) containing the URL of your repository and restart runtipi.
 
 ```json
 {
@@ -39,7 +44,7 @@ Create a `settings.json` file in the `state` folder (`runtipi/state/settings.jso
 }
 ```
 
-If you need to be on a different branch than the main one in your repo, write your repo URL using the following notation :
+If you need to be on a different branch than the main one in your repository, write your repository URL using the following notation :
 
 ```json
 {
