--- a/pages/docs/guides/expose-your-apps.mdx
+++ b/pages/docs/guides/expose-your-apps.mdx
@@ -10,6 +10,12 @@ Runtipi allows you to expose your apps to the internet through a public domain t
   security implications of doing so. runtipi is not responsible for any security breach that could
   happen on your server resulting from exposing your apps.
 </Callout>
+<Callout type="warning">
+  Also be aware that opening ports 80 or 443 on your router can expose your network to security
+  risks. If someone knows your public IP address (which is easy to find by looking up your domain)
+  they will be able to access your runtipi login page. Make sure you have a strong password and
+  use 2FA to secure your runtipi instance.
+</Callout>
 
 ## Prerequisites
 
@@ -20,7 +26,8 @@ Runtipi allows you to expose your apps to the internet through a public domain t
 
 ## Configure your router
 
-Runtipi needs to be able to receive requests from the internet in order to generate the SSL certificates. To do so, you need to forward the port 80 and 443 of your router to the port 80 and 443 of your server.
+Runtipi needs to be able to receive requests from the internet in order to generate the SSL certificates.
+To do so, you need to forward the port 80 and 443 of your router to the port 80 and 443 of your server.
 This is a common operation and you can find a lot of tutorials on the internet on how to do it.
 
 ## Configure your DNS
